[package]
name = "hproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.6"
base64 = "0.13"
tracing = "0.1"
bytes = "1.1"
httparse = "1.4"

tokio = { version = "1", features = ["net", "io-util"], optional = true }

[features]
default = []
sync = []
async = ["tokio"]
rewrite = []
