[package]
name = "sproxy"
version = "0.3.1"
edition = "2021"
authors = ["PrivateRookie <996514515@qq.com>"]
description = "socks5 proxy client"
license-file = "../../LICENSE"
readme = "README.md"
homepage = "https://github.com/PrivateRookie/proxy"
repository = "https://github.com/PrivateRookie/proxy"
keywords = ["socks5", "proxy", "network", "tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
base64 = "0.22.0"
tracing = "0.1"
bytes = "1.1"
httparse = "1.8.0"

tokio = { version = "1", features = ["net", "io-util"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
[dev-dependencies]
tracing-subscriber = "0.3"

[features]
default = []
ser = ["serde"]
sync = []
async = ["tokio"]
